syntax = "proto3";

package google.protobuf;

option csharp_namespace = "Energinet.DataHub.Measurements.Contracts";

message SubmittedTransactionPersisted {
  string version = 1; 
  string orchestration_instance_id = 2;
  OrchestrationType orchestration_type = 3;
}

enum OrchestrationType {
  OT_UNSPECIFIED = 0;
  OT_SUBMITTED_MEASURE_DATA = 1;
}
